sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:4: error: ':' expected but ')' found.
  def gCrepeF(n){}
               ^BasicPancake:5: error: identifier expected but '}' found.
  for(x<-0 to (N-1)){gCrepeF(N-x)}} 
                                  ^