sort.pancake.BasicPancake.scala.code
def solve() {
	val N=getTaillePile()
  def gCrepeF(n){}
  for(x<-0 to (N-1)){gCrepeF(N-x)}}